--- a/proprietary/design-tokens/src/index.scss
+++ b/proprietary/design-tokens/src/index.scss
@@ -12,8 +12,7 @@
 @import "./responsive";
 
 .utrecht-theme,
-.utrecht-theme ::backdrop,
-.utrecht-theme ::selection {
+.utrecht-theme ::backdrop {
   @include utrecht-theme;
 
   utrecht-page-footer,
@@ -30,10 +29,8 @@
 @media (prefers-color-scheme: dark) {
   .utrecht-theme--media-query,
   .utrecht-theme--media-query ::backdrop,
-  .utrecht-theme--media-query ::selection,
   .utrecht-theme--media-query-color-scheme,
-  .utrecht-theme--media-query-color-scheme ::backdrop,
-  .utrecht-theme--media-query-color-scheme ::selection {
+  .utrecht-theme--media-query-color-scheme ::backdrop {
     @include utrecht-theme--dark;
   }
 }
